# notification-player

./: CMakeLists.txt  Makefile  README.md  build.yml  go.mod  makefile.mk  readme.md
.github/workflows/: ALL.yml  blank.yml  build.yml  build1.yml  bulid.yml  c-cpp.yml  c-cpp1.yml  c-cpp2.yml  go-ossf-slsa3-publish.yml  kylin.yml
cmd/motification-player/: main.go
deb/DEBIAN/: control  postinst  postrm  prerm
deb/etc/notification-player/: config.yaml
debian/: control  player-client.desktop  player-client.service  postinst  postinst.sh  prerm  rules
internal/config/: config.go
internal/player/: player.go
internal/server/: server.go
makefile/: makefile.mk
notification-client/: bulid.sh
notification-client/debian/: control.txt  prerm.sh
notification-client/makefile/: makefile.cross.mk  makefile.mk
notification-client/src/: config.h  deepseek_json_20260707_2047ee.json  http_server.c  http_server.h  main.c
notification-client/systemd/: notification-client.service
scripts/: package-deb.sh
src/: audio.c  audio.h  audio_player.c  audio_player.h  audio_worker.c  audio_worker.h  config.c  config.h  http_server.c  http_server.h  http_server_optimized.c  http_server_optimized.h  https_server_optimized.h  main.c  main_optimized.c  notification.c  notification.h
